force-app/main/default/objects/leaseworks__Payment_Receipt_Line_Item__c/leaseworks__Payment_Receipt_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Related list on Payment Studio. Holds the detailed information regarding the allocation of payments to specific invoices. Each payment batch received is broken down into individual line items, with each line item representing a specific invoice or transaction.
Population Requirement Details: Conditionally Required if legacy data loading is required
[MODULE: Finance]
[LOAD: Yes]
[PREREQUISITES: Payment Studio]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Payment Line Item</label>
    <nameField>
        <displayFormat>PLI - {000000}</displayFormat>
        <label>Payment Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>