force-app/main/default/objects/leaseworks__Payment_Receipt_Line_Item__c/fields/leaseworks__Amount_Paid_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid_Number__c</fullName>
    <description>Indicates the amount paid against this Payment Line Item.</description>
    <formula>leaseworks__Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the amount paid against this Payment Line Item.</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>