force-app/main/default/objects/leaseworks__Payment_Receipt_Line_Item__c/fields/leaseworks__Line_Amount_Applied_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Amount_Applied_Number__c</fullName>
    <description>Reflects the total amount applied on this Payment Line Item.</description>
    <formula>leaseworks__Line_Amount_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the total amount applied on this Payment Line Item.</inlineHelpText>
    <label>_Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>