force-app/main/default/objects/leaseworks__Payment_Receipt_Line_Item__c/fields/leaseworks__Y_Hidden_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Total_Amount__c</fullName>
    <description>Displays remaining balance on the allocation after deducting the &#39;Line Amount Unapplied&#39; from the Amount Paid.</description>
    <formula>leaseworks__Amount_Paid__c - leaseworks__Amount_Unapplied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays remaining balance on the allocation after deducting the &#39;Line Amount Unapplied&#39; from the Amount Paid.</inlineHelpText>
    <label>Line Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>